--- a/src/components/nav-bar/nav-bar.css
+++ b/src/components/nav-bar/nav-bar.css
@@ -25,3 +25,53 @@ nav ul li{
     transition: 0.5s;
     
 }
+.menu-icon{
+    display: none;
+}
+
+/* ----- media query -----*/
+@media (max-width:1000px){
+    /* .logo{
+        width: 100px;
+    } */
+    nav ul li{
+       margin: 10px 15px; 
+    }
+
+}
+@media (max-width:840px){
+    /* .logo{
+        width: 100px;
+    } */
+
+    
+    .menu-icon{
+        display: block;
+        width: 30px;
+        cursor: pointer;
+    }
+    nav{
+       margin: 15px 0; 
+       transition: 0.5s;
+       top: -15px;
+    }
+    nav ul{
+        position: fixed;
+        top: 0;
+        right: 0;
+        background:#a07821 ;
+        z-index: -1;
+        width: 200px;
+        padding-top: 70px;
+        transition: 0.5s;
+        bottom: 0;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px 40px;
+    }
+    .hide-mobile-menu{
+        right: -200px;
+    }
+
+}
