--- a/src/components/stories/stories.css
+++ b/src/components/stories/stories.css
@@ -40,3 +40,14 @@
     opacity: 1;
     padding-top: 0;
 }
+/* ----- media query -----*/
+@media (max-width:650px){
+   .stories{
+    flex-direction: column;
+   }
+   .story{
+    flex-basis: 100%;
+    margin: 20px;
+   }
+ 
+ }
