--- a/src/components/Album/Album.css
+++ b/src/components/Album/Album.css
@@ -8,10 +8,29 @@
     display: flexbox;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 .gallery img{
     width: 23%;
     border-radius: 10px;
     margin: 10px;
 }
+/* ----- media query -----*/
+@media (max-width:800px){
+   .gallery{
+    display: flex;
+    flex-wrap: wrap;
+   }
+   .gallery img{
+    width: 48%;
+    margin-bottom: 25px;
+    margin: 5px;
+   }
+ 
+ }
+ @media (max-width:615px){
+    .gallery img{
+     margin: 1px;
+    }
+  
+  }
