--- a/src/components/Testimonials/testimonials.css
+++ b/src/components/Testimonials/testimonials.css
@@ -56,3 +56,36 @@
 .user-info h3{
     color: #a07e21;
 }
+@media (max-width:800px){
+    .testimonials{
+        padding: 0 40px;
+    }
+    .next-btn .back-btn{
+        padding: 10px;
+        width: 35px;
+    }
+    .testimonials ul li{
+        padding: 10px;
+    }
+    .slide{
+        padding: 10px;
+    }
+    .slide img{
+        width: 50px;
+        border: 3px solid #a07e21;
+    }
+  }
+  @media (max-width:600px){
+ .user-info{
+    display: block;
+    margin-bottom: 10px;
+    font-size: 12px;
+ }
+ .user-info h3{
+font-size: 16px;
+ }
+ .slider h3{
+    font-size: 12px;
+     }
+  
+  }
