--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,17 +1,19 @@
-.contact{
+.contact {
     margin: 80px auto;
     max-width: 90%;
     display: flex;
     align-content: center;
     justify-content: center;
-    justify-content: space-around;
+    /* justify-content: space-around; */
 }
-.contact-col{
- flex-basis: 48%;   
-color: #676767;
+
+.contact-col {
+    flex-basis: 48%;
+    color: #676767;
 
 }
-.contact-col h3{
+
+.contact-col h3 {
     color: #383000;
     font-weight: 500;
     font-size: 25px;
@@ -19,45 +21,54 @@ color: #676767;
     align-items: center;
     margin-bottom: 20px;
 }
-.contact-col h3 img{
+
+.contact-col h3 img {
     width: 35px;
     margin-left: 10px;
 }
-.contact-col p{
+
+.contact-col p {
     max-width: 450px;
     list-style: 0.3;
 }
-.contact-col ul li{
+
+.contact-col ul li {
     display: flex;
     align-items: center;
     margin: 20px 0;
 }
-.contact-col ul li img{
+
+.contact-col ul li img {
     width: 25px;
     margin-right: 10px;
 }
-.contact form input,textarea{
 
-display: block;
-width: 100%;
-background: #ffffff;
-border: 0;
-outline: 0;
-padding: 15px;
-margin-top: 5px;
-margin-bottom: 15px;
-resize: none;
+.contact form input,
+textarea {
+
+    display: block;
+    width: 100%;
+    background: #ffffff;
+    border: 0;
+    outline: 0;
+    padding: 15px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    resize: none;
 }
-.contact-col span{
+
+.contact-col span {
     display: block;
     margin: 20px 0;
 }
-@media (max-width:700px){
-    .contact{
+
+@media (max-width:700px) {
+    .contact {
         display: block;
     }
-    .contact-col{
+
+    .contact-col {
         padding: 20px;
     }
-  
-  }
+
+}
